translate libraries/uri.html file

--- a/libraries/uri.html
+++ b/libraries/uri.html
@@ -58,8 +58,7 @@ URI 類別
 
 <h1>URI 類別</h1>
 
-<p>URI 類別 provides functions that help you retrieve information from your URI strings. If you use URI routing，you can
-also retrieve information about the re-routed segments.</p>
+<p>URI 類別提供函數，它幫助您解析 URI 字串資訊。假如您使用了 URI routing，也可以利用類別解析網址字串所設定的 re-routed 區段</p>
 
 <p class="important"><strong>注意:</strong> This class is initialized automatically by the system so there is no need to do it manually.</p>
 
