edit some changes of helpers/date_helper.html

--- a/helpers/date_helper.html
+++ b/helpers/date_helper.html
@@ -58,16 +58,16 @@ Date 補助函數
 
 <h1>Date 補助函數</h1>
 
-<p>The Date 補助函數 file contains functions that help you work with dates.</p>
+<p>Date 補助函數用來處理日期資料。</p>
 
 
 <h2>載入 補助函數</h2>
 
-<p>This helper is loaded using the following code:</p>
+<p>使用下列的程式碼載入補助程式：</p>
 <code>$this->load->helper('date');</code>
 
 
-<p>The following functions are available:</p>
+<p>下列為可以使用的函數：</p>
 
 <h2>now()</h2>
 
