--- a/helpers/file_helper.html
+++ b/helpers/file_helper.html
@@ -57,25 +57,25 @@ File 補助函數
 
 <h1>File 補助函數</h1>
 
-<p>The File 補助函數 file contains functions that assist in working with files.</p>
+<p>File 函數用來處理檔案讀寫相關資訊。</p>
 
 
-<h2>載入 補助函數</h2>
+<h2>載入補助函數</h2>
 
-<p>This helper is loaded using the following code:</p>
+<p>載入 File 補助函數</p>
 <code>$this->load->helper('file');</code>
 
-<p>The following functions are available:</p>
+<p>下列為可以使用的函數：</p>
 
 <h2>read_file('<var>path</var>')</h2>
 
-<p>Returns the data contained in the file specified in the path.  參考範例:</p>
+<p>回傳指定路徑之檔案相關內容。參考範例:</p>
 
 <code>$string = read_file('./path/to/file.php');</code>
 
-<p>The path can be a relative or full server path.  Returns FALSE (boolean) on failure.</p>
+<p>檔案路徑可以是絕對路徑或者是相關路徑。如果開檔失敗則回傳錯誤(boolean False)。</p>
 
-<p class="important"><strong>注意:</strong> The path is relative to your main site index.php file，NOT your controller or view files.
+<p class="important"><strong>注意:</strong> 檔案路徑是相關於網站根目錄 index.php 檔案，而不是相關路徑於您的控制器(controller)或是顯示(view)的檔案。
 CodeIgniter uses a front controller so paths are always relative to the main site index.</p>
 
 <p>If your server is running an open_basedir restriction this function
