edit some changes of changelog.html

--- a/changelog.html
+++ b/changelog.html
@@ -28,7 +28,7 @@
 <div id="masthead">
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
-<td><h1>CodeIgniter 使用手冊 Version 1.7.2</h1></td>
+<td><h1>CodeIgniter 使用手冊 版本 1.7.2</h1></td>
 <td id="breadcrumb_right"><a href="./toc.html">目錄</a></td>
 </tr>
 </table>
@@ -57,18 +57,18 @@
 
 <h1>版本紀錄</h1>
 
-<h2>Version 1.7.3</h2>
-<p>Release Date: not yet released<br />
-SVN Revision: </p>
+<h2>版本 1.7.3</h2>
+<p>發佈日期: 尚未發佈<br />
+SVN 版本: </p>
 
-<h2>Version 1.7.2</h2>
-<p>Release Date: September 11, 2009<br />
-SVN Revision: 1737</p>
+<h2>版本 1.7.2</h2>
+<p>發佈日期: 2009年9月11日<br />
+SVN 版本: 1737</p>
 
 <ul>
 	<li>Libraries
 		<ul>
-			<li>Added a new <a href="libraries/cart.html">Cart Class</a>.</li>
+			<li>新增 <a href="libraries/cart.html">Cart 類別</a>.</li>
 			<li>Added the ability to pass $config['file_name'] for the <a href="libraries/file_uploading.html">File Uploading Class</a> and rename the uploaded file.</li>
 			<li>Changed order of listed user-agents so Safari would more accurately report itself. (#6844)</li>
 		</ul>
@@ -128,8 +128,8 @@ SVN Revision: 1737</p>
 	<li>Fixed a bug in the typography class where heading tags could have paragraph tags inserted when using auto_typography().</li>
 </ul>
 
-<h2>Version 1.7.1</h2>
-<p>Release Date: February 10, 2009<br />
+<h2>版本 1.7.1</h2>
+<p>發佈日期: February 10, 2009<br />
 SVN Revision: 1640</p>
 
 <ul>
@@ -212,8 +212,8 @@ SVN Revision: 1640</p>
 </ul>
 
 
-<h2>Version 1.7</h2>
-<p>Release Date: October 23, 2008<br />
+<h2>版本 1.7</h2>
+<p>發佈日期: October 23, 2008<br />
 SVN Revision: 1541</p>
 
 <ul>
@@ -304,10 +304,10 @@ SVN Revision: 1541</p>
 	<li>Fixed a bug in which the parser was being greedy if multiple identical sets of tags were encountered.</li>
 </ul>
 
-<h2>Version 1.6.3</h2>
-<p>Release Date: June 26, 2008<br />
+<h2>版本 1.6.3</h2>
+<p>發佈日期: June 26, 2008<br />
 SVN Revision: 1238</p>
-<p>Version 1.6.3 is a security and maintenance release and is recommended for all users.</p>
+<p>版本 1.6.3 is a security and maintenance release and is recommended for all users.</p>
 <ul>
 	<li>Database
 		<ul>
@@ -363,8 +363,8 @@ SVN Revision: 1238</p>
 	<li>Fixed a double opening &lt;p&gt; tag in the index pages of each system directory.</li>
 </ul>
 
-<h2>Version 1.6.2</h2>
-<p>Release Date: May 13, 2008<br />
+<h2>版本 1.6.2</h2>
+<p>發佈日期: May 13, 2008<br />
 SVN Revision: 1155</p>
 <ul>
 	<li>Active Record
@@ -425,7 +425,7 @@ SVN Revision: 1155</p>
 			<li>Added ability for <a href="libraries/input.html">xss_clean()</a> to accept arrays.</li>
 			<li>Removed closing PHP tags from all PHP files to avoid accidental output and potential 'cannot modify headers' errors.</li>
 			<li>Removed &quot;scripts&quot; from the auto-load search path. Scripts were deprecated 
-				in Version 1.4.1 (September 21, 2006). If you still need to use them for legacy reasons, they must now be manually loaded in each Controller.</li>
+				in 版本 1.4.1 (September 21, 2006). If you still need to use them for legacy reasons, they must now be manually loaded in each Controller.</li>
 			<li>Added a <a href="general/reserved_names.html">Reserved Names</a> page to the userguide, and migrated reserved controller names into it.</li>
 			<li>Added a <a href="general/common_functions.html">Common Functions</a> page to the userguide for globally available functions.</li>
 			<li>Improved security and performance of xss_clean().</li>
@@ -466,8 +466,8 @@ SVN Revision: 1155</p>
 	<li>Fixed assorted user guide typos (#3453, #4364, #4379, #4399, #4408, #4412, #4448, #4488).</li>
 	</ul>
 
-<h2>Version 1.6.1</h2>
-<p>Release Date: February 12, 2008<br />
+<h2>版本 1.6.1</h2>
+<p>發佈日期: February 12, 2008<br />
 	SVN Revision: 984</p>
 <ul>
 	<li>Active Record 
@@ -518,8 +518,8 @@ SVN Revision: 1155</p>
 
 
 
-<h2>Version 1.6.0</h2>
-<p>Release Date: January 30, 2008 </p>
+<h2>版本 1.6.0</h2>
+<p>發佈日期: January 30, 2008 </p>
 <ul>
 	<li>DBForge
 		<ul>
@@ -626,7 +626,7 @@ SVN Revision: 1155</p>
 	</li>
 </ul>
 
-<h3>Bug fixes for Version 1.6.0</h3>
+<h3>Bug fixes for 版本 1.6.0</h3>
 	
 <ul>
 	<li>Fixed a bug (#1813) preventing using $CI->db in the same application with returned database objects.</li>
@@ -688,8 +688,8 @@ SVN Revision: 1155</p>
 	<li>Fixed a series of grammatical and spelling errors in the language files.</li>
 	<li>Fixed assorted user guide typos.</li>
 </ul>
-<h2>Version 1.5.4</h2>
-<p>Release Date: July 12, 2007 </p>
+<h2>版本 1.5.4</h2>
+<p>發佈日期: July 12, 2007 </p>
 <ul>
 	<li>Added <a href="./libraries/language.html">custom Language files</a> to the <a href="./general/autoloader.html">autoload</a> options. </li>
 	<li>Added stripslashes() to the _clean_input_data() function in the <a href="./libraries/input.html">Input class</a> when magic quotes is on so that data will always be un-slashed within the framework.</li>
@@ -726,8 +726,8 @@ SVN Revision: 1155</p>
 	<li>Deprecated the use if <kbd>is_numeric()</kbd> in various places since it allows periods.  Due to compatibility problems with <kbd>ctype_digit()</kbd>, making it unreliable in some installations, the following regular expression was used instead:  <kbd>preg_match("/[^0-9]/", $n)</kbd></li>
 	<li>Deprecated: APPVER has been deprecated and replaced with CI_VERSION for clarity. </li>
 </ul>
-<h2>Version 1.5.3</h2>
-<p>Release Date: April 15, 2007 </p>
+<h2>版本 1.5.3</h2>
+<p>發佈日期: April 15, 2007 </p>
 <ul>
 	<li>Added array to string into the profiler </li>
 	<li>Code Igniter references updated to CodeIgniter </li>
@@ -741,8 +741,8 @@ SVN Revision: 1155</p>
 	<li>Fixed a bug in the textarea function of the form helper for use with strings</li>
 	<li>Fixed doc typos. </li>
 </ul>
-<h2>Version 1.5.2</h2>
-<p>Release Date: February 13, 2007 </p>
+<h2>版本 1.5.2</h2>
+<p>發佈日期: February 13, 2007 </p>
 <ul>
 	<li>Added <a href="./installation/downloads.html#svn">subversion information</a> to the <a href="./installation/downloads.html">downloads</a> page. </li>
 	<li>Added support for captions in the <a href="./libraries/table.html">Table Library</a> </li>
@@ -756,8 +756,8 @@ SVN Revision: 1155</p>
 </ul>
 
 
-<h2>Version 1.5.1</h2>
-<p>Release Date: November 23, 2006</p>
+<h2>版本 1.5.1</h2>
+<p>發佈日期: November 23, 2006</p>
 <ul>
 	<li>Added support for submitting arrays of libraries in the $this-&gt;load-&gt;library function.</li>
 	<li>Added support for naming custom library files in lower or uppercase.</li>
@@ -771,8 +771,8 @@ SVN Revision: 1155</p>
 	<li>Fixed an incorrectly named variable in the MySQLi result driver.</li>
 	<li>Fixed some doc typos.</li>
 </ul>
-<h2>Version 1.5.0.1</h2>
-<p>Release Date: October 31, 2006</p>
+<h2>版本 1.5.0.1</h2>
+<p>發佈日期: October 31, 2006</p>
 <ul>
 <li>Fixed a problem in which duplicate attempts to load helpers and classes were not being stopped.</li>
 <li>Fixed a bug in the word_wrap() helper function.</li>
@@ -782,8 +782,8 @@ SVN Revision: 1155</p>
 
 
 
-<h2>Version 1.5.0</h2>
-<p>Release Date: October 30, 2006</p>
+<h2>版本 1.5.0</h2>
+<p>發佈日期: October 30, 2006</p>
 
 <ul>
 <li>Added <a href="./database/utilities.html">DB utility class</a>, permitting DB backups, CVS or XML files from DB results, and various other functions.</li>
@@ -832,8 +832,8 @@ SVN Revision: 1155</p>
 
 
 
-<h2>Version 1.4.1</h2>
-<p>Release Date: September 21, 2006</p>
+<h2>版本 1.4.1</h2>
+<p>發佈日期: September 21, 2006</p>
 
 <ul>
 <li>Added a new feature that passes URI segments directly to your function calls as parameters. See the <a href="./general/controllers.html">Controllers</a> page for more info.</li>
@@ -863,8 +863,8 @@ SVN Revision: 1155</p>
 
 
 
-<h2>Version 1.4.0</h2>
-<p>Release Date: September 17, 2006</p>
+<h2>版本 1.4.0</h2>
+<p>發佈日期: September 17, 2006</p>
 
 <ul>
 <li>Added <a href="./general/hooks.html">Hooks</a> feature, enabling you to tap into and modify the inner workings of the framework without hacking the core files.</li>
@@ -919,8 +919,8 @@ SVN Revision: 1155</p>
 
 
 
-<h2>Version 1.3.3</h2>
-<p>Release Date: June 1, 2006</p>
+<h2>版本 1.3.3</h2>
+<p>發佈日期: June 1, 2006</p>
 
 <ul>
 
@@ -941,8 +941,8 @@ SVN Revision: 1155</p>
 
 
 
-<h2>Version 1.3.2</h2>
-<p>Release Date: April 17, 2006</p>
+<h2>版本 1.3.2</h2>
+<p>發佈日期: April 17, 2006</p>
 
 <ul>
 <li>Changed the behavior of the validation class such that if a "required" rule is NOT explicitly stated for a field then all other tests get ignored.</li>
@@ -955,8 +955,8 @@ SVN Revision: 1155</p>
 
 
 
-<h2>Version 1.3.1</h2>
-<p>Release Date: April 11, 2006</p>
+<h2>版本 1.3.1</h2>
+<p>發佈日期: April 11, 2006</p>
 
 <ul>
 <li>Added a <a href="./libraries/unit_testing.html">Unit Testing Library</a>.</li>
@@ -977,8 +977,8 @@ This feature enables you to (among other things) use your  <a href="./general/mo
 </ul>
 
 
-<h2>Version 1.3</h2>
-<p>Release Date: April 3, 2006</p>
+<h2>版本 1.3</h2>
+<p>發佈日期: April 3, 2006</p>
 
 <ul>
 <li>Added support for <a href="models.html">Models</a>.</li>
@@ -1011,8 +1011,8 @@ all controller methods are prefixed with <dfn>_ci</dfn> to avoid controller coll
 
 
 
-<h2>Version 1.2</h2>
-<p>Release Date: March 21, 2006</p>
+<h2>版本 1.2</h2>
+<p>發佈日期: March 21, 2006</p>
 
 <ul>
 <li>Redesigned some internal aspects of the framework to resolve scoping problems that surfaced during the beta tests. The problem was most notable when instantiating classes in your constructors, particularly if those classes in turn did work in their constructors.</li>
@@ -1034,8 +1034,8 @@ all controller methods are prefixed with <dfn>_ci</dfn> to avoid controller coll
 
 
 
-<h2>Version Beta 1.1</h2>
-<p>Release Date: March 10, 2006</p>
+<h2>版本 Beta 1.1</h2>
+<p>發佈日期: March 10, 2006</p>
 
 <ul>
 <li>Added a <a href="./libraries/calendar.html">Calendaring class</a>.</li>
@@ -1057,8 +1057,8 @@ all controller methods are prefixed with <dfn>_ci</dfn> to avoid controller coll
 <li>Updated the documentation. Added "next/previous" links to each page and fixed various typos.</li>
 </ul>
 
-<h2>Version Beta 1.0 </h2>
-<p>Release Date: February 28, 2006</p>
+<h2>版本 Beta 1.0 </h2>
+<p>發佈日期: February 28, 2006</p>
 <p>First publicly released version.</p>
 
 </div>
