--- a/toc.html
+++ b/toc.html
@@ -108,7 +108,7 @@
 	<li><a href="./general/autoloader.html">自動載入資源</a></li>
 	<li><a href="general/common_functions.html">通用函數</a></li>
 	<li><a href="./general/scaffolding.html">腳手架 (Scaffolding)</a></li>
-	<li><a href="./general/routing.html">URI Routing</a></li>
+	<li><a href="./general/routing.html">URI 路由</a></li>
 	<li><a href="./general/errors.html">錯誤處理</a></li>
 	<li><a href="./general/caching.html">快取</a></li>
 	<li><a href="./general/profiling.html">Application 效能分析</a></li>
