--- a/libraries/calendar.html
+++ b/libraries/calendar.html
@@ -58,12 +58,11 @@ Calendaring 類別
 
 
 
-<h1>Calendaring 類別</h1>
+<h1>日曆類別</h1>
 
-<p>The Calendar class enables you to dynamically create calendars. Your calendars can be formatted through the use of a calendar
-template，allowing 100% control over every aspect of its design. In addition，you can pass data to your calendar cells.</p>
+<p>日曆類可以讓你動態創建日曆。並且用日曆模板對建立的日曆格式化,100%的控制它的樣式。另外，你可以傳送資料到你的日曆單元格中。</p>
 
-<h2>Initializing the 類別</h2>
+<h2>初始化類別</h2>
 
 <p>Like most other classes in CodeIgniter，the Calendar class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
 
