--- a/installation/upgrade_172.html
+++ b/installation/upgrade_172.html
@@ -76,12 +76,12 @@
 
 <p class="important"><strong>注意:</strong> 如果之前在這些目錄裡頭，有任何你自己所開發的檔案，請記得要複製進去。</p>
 
-<h2>步驟二: Remove header() from 404 error template</h2>
-<p>If you are using header() in your 404 error template, such as the case with the default <samp>error_404.php</samp> template shown below, remove that line of code.</p>
+<h2>步驟二: 將404錯誤模板中的 header() 移除</h2>
+<p>如果你的404錯誤模板中使用了 header() ，例如下面顯示的默認 <samp>error_404.php</samp> 模板，請移除那一行代碼。</p>
 
 <code>&lt;?php header(&quot;HTTP/1.1 404 Not Found&quot;); ?&gt;</code>
 
-<p>404 status headers are now properly handled in the show_404() method itself.</p>
+<p>現在 show_404() 方法自身已經可以很好地處理404狀態表頭。</p>
 
 <h2>步驟三: 更新您的說明文件</h2>
 <p>請更新您的使用手冊到最新版本，包含所有影像檔案</p>
