--- a/libraries/email.html
+++ b/libraries/email.html
@@ -282,7 +282,7 @@ gets wrapped normally.<br />
 More text that will be<br />
 wrapped normally.</code>
 
-<p>Place the item you do not want word-wrapped between: <var>{unwrap}</var> <var>{/unwrap}</var></p>
+<p>將你不想自動換行的部分放入： <var>{unwrap}</var> <var>{/unwrap}</var> 中間</p>
 
 
 </div>
