translate libraries/email.html

--- a/libraries/email.html
+++ b/libraries/email.html
@@ -270,9 +270,7 @@ $this->email->send();</code>
 
 <h2>取消自動換行</h2>
 
-<p>If you have word wrapping enabled (recommended to comply with RFC 822) and you have a very long link in your email it can
-get wrapped too，causing it to become un-clickable by the person receiving it.  CodeIgniter lets you manually override
-word wrapping within part of your message like this:</p>
+<p>如果你啟用自動換行(建議遵守 RFC 822)，EMAIL中有一個非常長的連結它將會換行，導致連結不能被收信人直接點擊打開。CodeIgniter 可以對內容的部分片段避免這種自動換行，比如：</p>
 
 <code>The text of your email that<br />
 gets wrapped normally.<br />
@@ -297,7 +295,7 @@ wrapped normally.</code>
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 下個主題:&nbsp;&nbsp;<a href="encryption.html">Encryption 類別</a>
 </p>
-<p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
+<p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2010 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
 
 <script type="text/javascript">
