translate libraries/email.html

--- a/libraries/email.html
+++ b/libraries/email.html
@@ -254,8 +254,7 @@ in a loop，permitting the data to be reset between cycles.</p>
 
 
 <h3>$this->email->attach()</h3>
-<p>啟動附件檔案. Put the file path/name in the first parameter. 注意: Use a file path，not a URL.
-For multiple attachments use the function multiple times. For 參考範例:</p>
+<p>新增附件檔案。第一個參數是檔案路徑/檔案名稱. 注意: 用檔案路徑而不是 URL。多次使用該函數可以新增多個附件: </p>
 
 <code>$this->email->attach('/path/to/photo1.jpg');<br />
 $this->email->attach('/path/to/photo2.jpg');<br />
